// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flags > --bail > should apply #0 1`] = `
Object {
  "bail": true,
  "entry": "<PROJECT_ROOT>/test/fixtures/flags/bail/entry.js",
  "mode": "development",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --config > should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  2.85 KiB    main  [emitted]  main
Entrypoint main = main.js
[./src/index.js] 43 bytes {main} [built]"
`;

exports[`Flags > --context > should apply #0 1`] = `
Object {
  "context": "<PROJECT_ROOT>/test/fixtures/common",
  "entry": "./entry-a.js",
  "mode": "development",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --context > should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  2.84 KiB    main  [emitted]  main
Entrypoint main = main.js
[./entry-a.js] 41 bytes {main} [built]"
`;

exports[`Flags > --debug > should apply #0 1`] = `
Object {
  "context": "<PROJECT_ROOT>",
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "plugins": Array [
    LoaderOptionsPlugin {
      "options": Object {
        "debug": true,
        "test": Object {
          "test": [Function],
        },
      },
    },
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --debug > should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  2.96 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]"
`;

exports[`Flags > --define > should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/flags/define/entry.js",
  "mode": "development",
  "plugins": Array [
    DefinePlugin {
      "definitions": Object {
        "DEFINE": "'valid'",
      },
    },
    NamedModulesPlugin {
      "options": Object {},
    },
    DefinePlugin {
      "definitions": Object {
        "test": "invalid",
      },
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --define > should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  3.04 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/flags/define/entry.js] 91 bytes {main} [built]"
`;

exports[`Flags > --devtool > should apply #0 1`] = `
Object {
  "context": "<PROJECT_ROOT>",
  "devtool": "cheap-source-map",
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --devtool > should build #0 1`] = `
"Version: webpack 4.3.0
      Asset      Size  Chunks             Chunk Names
    main.js  2.92 KiB    main  [emitted]  main
main.js.map  2.64 KiB    main  [emitted]  main
Entrypoint main = main.js main.js.map
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]"
`;

exports[`Flags > --devtool > should build #1 1`] = `"f349b18e"`;

exports[`Flags > --devtool > should build #2 1`] = `"195aef37"`;
